--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,23 @@
     font-size: 15px;
 }
 
+.container {
+    width: 500px;
+    height: 500px;
+}
 
+body {
+    overflow-x: hidden;
+}
+
+
+body p  {
+    /* color: white; */
+}
+
+body h6 {
+    color: white;
+}
 
 .container {
     width: 100%;
@@ -19,21 +35,36 @@
     height: 500px;
 }
 
- header {
+
+header {
     position: fixed;
     z-index: 9999;
     width: 100%;
+    height: 110px;
+    color: red;
+    background: wheat;
 } 
+
+.sosmed img {
+    color: red;
+}
+
+header menu nav ul li a {
+    color: red;
+}
+
 
 header img {
     float: left;
-    padding: 34px;
+    padding: 0px;
 }
 
 menu {
     float: left;
     margin: 46px 0 0 45px;
 }
+
+
 
 
 
@@ -116,16 +147,25 @@ nav ul ul li a {
 /*Gambar Galery*/
 .gambargalery img{
     width: 100%;
-  
     height: 600px;
 }
 
+.galerikonten p {
+    color: white;
+}
+
+.galerikonten h1 {
+    color: white;
+}
+
+.galerikonten h3 {
+    color: white;
+}
 
 /* Judul galeri */
 .judulgaleri
 {
     width: 100%;
-   
     float: left;
     position: absolute;
     top: 200px;
@@ -246,7 +286,6 @@ nav ul ul li a {
 .destination{
     width: 100%;
     padding: 150px 0;
-    background-color: white;
 }
 
 .destination .galerikonten{
@@ -260,6 +299,7 @@ nav ul ul li a {
 .destination .galerikonten h3{
     font-size: 32px;
     margin-bottom: 20px;
+    color: wheat;
 }
 
 .destination .galerikonten > p{
@@ -337,7 +377,7 @@ nav ul ul li a {
     margin: auto;
     overflow: hidden;
     margin-right: 12px;
-    
+   
     
 }
 
@@ -380,6 +420,7 @@ nav ul ul li a {
     float: left;
     margin-left: 950px;
     margin-top: -40px;
+
 }
 
 .container .subscribe {
@@ -402,8 +443,12 @@ nav ul ul li a {
 .popular-place{
     width: 100%;
     padding: 150px 0;
-    background-color: white;
+    background-color: black;
     margin-top: -90px;
+}
+
+.popular-place p {
+    color: white;
 }
 
 .popular-place .galerikonten{
@@ -502,6 +547,13 @@ nav ul ul li a {
     background: aqua;
 }
 
+.bag1 h5  {
+    color: white;
+}
+
+.bag1 p {
+    color: wheat;
+}
 
 
 
@@ -588,6 +640,10 @@ nav ul ul li a {
     margin-left: 180px;
     margin-right: -95px;
 }
+
+.fotorec h5 {
+    color: white;
+}
 .recent .fotorec img{
     width: 350px;
     height: 400px;
@@ -617,8 +673,7 @@ nav ul ul li a {
 footer {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 100%;
+    height: 500px;
     border-bottom: 2px solid black;
     justify-content: center;
     background: indigo;
@@ -627,8 +682,8 @@ footer {
 }
 
 footer img {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100px;
 }
 
 .foot1 h1 {
@@ -757,4 +812,14 @@ footer img {
     color: white;
 }
 
+.foot5 {
+    display: flex;
+    justify-content: center;
+}
+
+.foot5 h1 {
+    margin-top: 370px;
+    text-align: center;
+    margin-left: -1090px;
+}
 
